--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Hack Spots Gil</title>
+        <title>Probe Trace</title>
         <meta charset='utf-8'>
         <script type="text/javascript" src='js/jquery.js '></script>
         <script type="text/javascript" src='js/tabletop1.3.4.js'></script>
@@ -19,15 +19,15 @@
     </head>
 <body>
     <div id="wrapper">
-        <h1>Hack Spots</h1>
+        <h1>Probe Trace</h1>
         <div>
-            <ul class="nav">
+            <!--<ul class="nav">
                 <li><strong>The collected favorites of those who hack</strong></li>
                 <li><a href="#info">INFO</a> -</li>
                 <li><a href="http://jlord.github.com/sheetsee.js" target="_blank">POWERED BY SHEETSEE.JS</a> -</li>
                 <li><a href="http://www.github.com/jlord/hack-spots" target="_blank">GITHUB</a> -</li>
                 <li><a href="http://www.twitter.com/jllord" target="_blank">@JLLORD</a></li>
-            </ul>
+            </ul>-->
         </div>
         <div class="container">
             <div id="rightSide">
@@ -72,7 +72,7 @@
             <h2>{{name}}</h2>
             <p class="colorText">{{address}}<p>
             <p class="colorText">{{city}}{{#state}}, {{state}}{{/state}}{{#postcode}}, {{postcode}}{{/postcode}}</p>
-            /*<ul>
+            <!--<ul>
                 <li><span class="category">Wifi:</span> {{wifipassword}}</li>
                 <li><span class="category">Outlets:</span> {{outlets}}</li>
                 <li><span class="category">Couch:</span> {{couch}}</li>
@@ -84,7 +84,7 @@
             <ul>
                 <li><a href="https://maps.google.com/maps?q={{address}},{{city}},{{state}}" target="_blank">View in Google Maps</a></li>
                 <li><a href="http://www.yelp.com/search?find_desc={{name}}&find_loc={{city}},{{state}}" target="_blank">Find on Yelp</a></li>
-            </ul>*/
+            </ul>-->
         {{/rows}}
     </script>
 
@@ -98,7 +98,7 @@
             <h2>{{name}}</h2>
             <p class="colorText">{{address}}<p>
             <p class="colorText">{{city}}{{#state}}, {{state}}{{/state}}{{#postcode}}, {{postcode}}{{/postcode}}</p>
-            /*<ul>
+            <!--<ul>
                 <li><span class="category">Wifi:</span> {{wifipassword}}</li>
                 <li><span class="category">Outlets:</span> {{outlets}}</li>
                 <li><span class="category">Couch:</span> {{couch}}</li>
@@ -109,7 +109,7 @@
             <ul>
                 <li><a href="https://maps.google.com/maps?q={{address}},{{city}},{{state}}" target="_blank">View in Google Maps</a></li>
                 <li><a href="http://www.yelp.com/search?find_desc={{name}}&find_loc={{city}},{{state}}" target="_blank">Find on Yelp</a></li>
-            </ul>*/
+            </ul>-->
         {{/rows}}
     </script>
 
