--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <span class="noMatches">no matches</span>
             <div id="hackSpotsTable"></div>
         </div>
-        <div id="info" class="container">
+       <!-- <div id="info" class="container">
             <h3>Contribute!</h3>
             <div id="theNumberofSpots"></div>
             <p>This website is hooked up to <a href="https://docs.google.com/spreadsheets/d/1hnfQcggYcBYimuO_UOMvwoOi_I9vUvFpkMt4wjrrpLE/edit?usp=sharing" target="_blank">this Google Spreadsheet</a>, which I've shared, so click and add your favorite hack spots to the bottom of the list! For the map you'll need to <strong>get the lat and long</strong> of the spot, you can get that <a href="http://www.latlong.net/" target="_blank">here</a>. The locating of these places is helpful, so please try to fill out all the columns.</p>
@@ -54,7 +54,7 @@
 
             <h3>Fork-n-Go</h3>
             <p>This is a work-in-progress example of a fork-n-go project - which means, there is just a <a href="https://github.com/jlord/hack-spots" target="_blank">gh-pages branch in GitHub</a> for this project so when you fork it, you've got a live and hosted website instantly. BAM! Just copy the spreadsheet headers and create your own spreadsheet, swap out the spreadsheet key in index.html and commit those changes. BAM! You've got a live and hosted site with a spreadsheet you control. More on the <a href="http://www.github.com/jlord/hack-spots" target="_blank">readme</a>.</p>
-        </div>
+        </div> -->
     </div><!-- end wrapper -->
 
     <script id="hackSpotsTable" type="text/html">
